dist.x86_64-pc-linux-gnu/etc/python/grass/lib/gis.py


# include/grass/defs/gis.h: 483
if _libs["grass_gis.8.5"].has("G_ls2", "cdecl"):
    G_ls2 = _libs["grass_gis.8.5"].get("G_ls2", "cdecl")
    G_ls2.argtypes = [String, POINTER(c_int)]
    G_ls2.restype = POINTER(POINTER(c_char))

# include/grass/defs/gis.h: 484
if _libs["grass_gis.8.5"].has("G_ls", "cdecl"):
    G_ls = _libs["grass_gis.8.5"].get("G_ls", "cdecl")
    G_ls.argtypes = [String, POINTER(FILE)]
    G_ls.restype = None

# include/grass/defs/gis.h: 485
if _libs["grass_gis.8.5"].has("G_ls_format", "cdecl"):
    G_ls_format = _libs["grass_gis.8.5"].get("G_ls_format", "cdecl")
    G_ls_format.argtypes = [POINTER(POINTER(c_char)), c_int, c_int, POINTER(FILE)]
    G_ls_format.restype = None

# include/grass/defs/gis.h: 489
if _libs["grass_gis.8.5"].has("G_ls_regex_filter", "cdecl"):
    G_ls_regex_filter = _libs["grass_gis.8.5"].get("G_ls_regex_filter", "cdecl")
    G_ls_regex_filter.argtypes = [String, c_int, c_int, c_int]
    G_ls_regex_filter.restype = POINTER(c_ubyte)
    G_ls_regex_filter.errcheck = lambda v, *a: cast(v, c_void_p)

# include/grass/defs/gis.h: 490
if _libs["grass_gis.8.5"].has("G_ls_glob_filter", "cdecl"):
    G_ls_glob_filter = _libs["grass_gis.8.5"].get("G_ls_glob_filter", "cdecl")
    G_ls_glob_filter.argtypes = [String, c_int, c_int]
    G_ls_glob_filter.restype = POINTER(c_ubyte)
    G_ls_glob_filter.errcheck = lambda v, *a: cast(v, c_void_p)

# include/grass/defs/gis.h: 491
if _libs["grass_gis.8.5"].has("G_free_ls_filter", "cdecl"):
    G_free_ls_filter = _libs["grass_gis.8.5"].get("G_free_ls_filter", "cdecl")
    G_free_ls_filter.argtypes = [POINTER(None)]
    G_free_ls_filter.restype = None

# include/grass/defs/gis.h: 495
if _libs["grass_gis.8.5"].has("G_make_location", "cdecl"):
    G_make_location = _libs["grass_gis.8.5"].get("G_make_location", "cdecl")
    G_make_location.argtypes = [
        String,
        POINTER(struct_Cell_head),
        POINTER(struct_Key_Value),
        POINTER(struct_Key_Value),
    ]
    G_make_location.restype = c_int

# include/grass/defs/gis.h: 497
if _libs["grass_gis.8.5"].has("G_make_location_epsg", "cdecl"):
    G_make_location_epsg = _libs["grass_gis.8.5"].get("G_make_location_epsg", "cdecl")
    G_make_location_epsg.argtypes = [
        String,
        POINTER(struct_Cell_head),
        POINTER(struct_Key_Value),
        POINTER(struct_Key_Value),
        POINTER(struct_Key_Value),
    ]
    G_make_location_epsg.restype = c_int

# include/grass/defs/gis.h: 500
if _libs["grass_gis.8.5"].has("G_make_location_crs", "cdecl"):
    G_make_location_crs = _libs["grass_gis.8.5"].get("G_make_location_crs", "cdecl")
    G_make_location_crs.argtypes = [
        String,
        POINTER(struct_Cell_head),
        POINTER(struct_Key_Value),
        POINTER(struct_Key_Value),
        String,
        String,
    ]
    G_make_location_crs.restype = c_int

# include/grass/defs/gis.h: 503
if _libs["grass_gis.8.5"].has("G_write_projsrid", "cdecl"):
    G_write_projsrid = _libs["grass_gis.8.5"].get("G_write_projsrid", "cdecl")
    G_write_projsrid.argtypes = [String, String]
    G_write_projsrid.restype = c_int

# include/grass/defs/gis.h: 504
if _libs["grass_gis.8.5"].has("G_write_projwkt", "cdecl"):
    G_write_projwkt = _libs["grass_gis.8.5"].get("G_write_projwkt", "cdecl")
    G_write_projwkt.argtypes = [String, String]
    G_write_projwkt.restype = c_int

# include/grass/defs/gis.h: 505
if _libs["grass_gis.8.5"].has("G_compare_projections", "cdecl"):
    G_compare_projections = _libs["grass_gis.8.5"].get("G_compare_projections", "cdecl")
    G_compare_projections.argtypes = [
        POINTER(struct_Key_Value),
        POINTER(struct_Key_Value),
        POINTER(struct_Key_Value),
        POINTER(struct_Key_Value),
    ]
    G_compare_projections.restype = c_int

# include/grass/defs/gis.h: 509
if _libs["grass_gis.8.5"].has("G_make_mapset", "cdecl"):
    G_make_mapset = _libs["grass_gis.8.5"].get("G_make_mapset", "cdecl")
    G_make_mapset.argtypes = [String, String, String]
    G_make_mapset.restype = c_int

# include/grass/defs/gis.h: 512
if _libs["grass_gis.8.5"].has("G_tolcase", "cdecl"):
    G_tolcase = _libs["grass_gis.8.5"].get("G_tolcase", "cdecl")
    G_tolcase.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_tolcase.restype = ReturnString
    else:
        G_tolcase.restype = String
        G_tolcase.errcheck = ReturnString

# include/grass/defs/gis.h: 513
if _libs["grass_gis.8.5"].has("G_toucase", "cdecl"):
    G_toucase = _libs["grass_gis.8.5"].get("G_toucase", "cdecl")
    G_toucase.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_toucase.restype = ReturnString
    else:
        G_toucase.restype = String
        G_toucase.errcheck = ReturnString

# include/grass/defs/gis.h: 516
if _libs["grass_gis.8.5"].has("G_mapset", "cdecl"):
    breakpoint()
    G_mapset = _libs["grass_gis.8.5"].get("G_mapset", "cdecl")
    G_mapset.argtypes = []
    G_mapset.restype = c_char_p

# include/grass/defs/gis.h: 517
if _libs["grass_gis.8.5"].has("G_mapset_path", "cdecl"):
    breakpoint()
    G_mapset_path = _libs["grass_gis.8.5"].get("G_mapset_path", "cdecl")
    G_mapset_path.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_mapset_path.restype = ReturnString
    else:
        G_mapset_path.restype = String
        G_mapset_path.errcheck = ReturnString

# include/grass/defs/gis.h: 520
if _libs["grass_gis.8.5"].has("G_make_mapset_element", "cdecl"):
    G_make_mapset_element = _libs["grass_gis.8.5"].get("G_make_mapset_element", "cdecl")
    G_make_mapset_element.argtypes = [String]
    G_make_mapset_element.restype = c_int

# include/grass/defs/gis.h: 521
if _libs["grass_gis.8.5"].has("G_make_mapset_element_tmp", "cdecl"):
    G_make_mapset_element_tmp = _libs["grass_gis.8.5"].get(
        "G_make_mapset_element_tmp", "cdecl"
    )
    G_make_mapset_element_tmp.argtypes = [String]
    G_make_mapset_element_tmp.restype = c_int

# include/grass/defs/gis.h: 522
if _libs["grass_gis.8.5"].has("G_make_mapset_object_group", "cdecl"):
    G_make_mapset_object_group = _libs["grass_gis.8.5"].get(
        "G_make_mapset_object_group", "cdecl"
    )
    G_make_mapset_object_group.argtypes = [String]
    G_make_mapset_object_group.restype = c_int

# include/grass/defs/gis.h: 523
if _libs["grass_gis.8.5"].has("G_make_mapset_dir_object", "cdecl"):
    G_make_mapset_dir_object = _libs["grass_gis.8.5"].get(
        "G_make_mapset_dir_object", "cdecl"
    )
    G_make_mapset_dir_object.argtypes = [String, String]
    G_make_mapset_dir_object.restype = c_int

# include/grass/defs/gis.h: 524
if _libs["grass_gis.8.5"].has("G_make_mapset_object_group_tmp", "cdecl"):
    G_make_mapset_object_group_tmp = _libs["grass_gis.8.5"].get(
        "G_make_mapset_object_group_tmp", "cdecl"
    )
    G_make_mapset_object_group_tmp.argtypes = [String]
    G_make_mapset_object_group_tmp.restype = c_int

# include/grass/defs/gis.h: 525
if _libs["grass_gis.8.5"].has("G_make_mapset_object_group_basedir", "cdecl"):
    G_make_mapset_object_group_basedir = _libs["grass_gis.8.5"].get(
        "G_make_mapset_object_group_basedir", "cdecl"
    )
    G_make_mapset_object_group_basedir.argtypes = [String, String]
    G_make_mapset_object_group_basedir.restype = c_int

# include/grass/defs/gis.h: 526
if _libs["grass_gis.8.5"].has("G__make_mapset_element_misc", "cdecl"):
    G__make_mapset_element_misc = _libs["grass_gis.8.5"].get(
        "G__make_mapset_element_misc", "cdecl"
    )
    G__make_mapset_element_misc.argtypes = [String, String]
    G__make_mapset_element_misc.restype = c_int

# include/grass/defs/gis.h: 527
if _libs["grass_gis.8.5"].has("G_mapset_permissions", "cdecl"):
    G_mapset_permissions = _libs["grass_gis.8.5"].get("G_mapset_permissions", "cdecl")
    G_mapset_permissions.argtypes = [String]
    G_mapset_permissions.restype = c_int

# include/grass/defs/gis.h: 528
if _libs["grass_gis.8.5"].has("G_mapset_permissions2", "cdecl"):
    G_mapset_permissions2 = _libs["grass_gis.8.5"].get("G_mapset_permissions2", "cdecl")
    G_mapset_permissions2.argtypes = [String, String, String]
    G_mapset_permissions2.restype = c_int

# include/grass/defs/gis.h: 531
if _libs["grass_gis.8.5"].has("G_get_mapset_name", "cdecl"):
    G_get_mapset_name = _libs["grass_gis.8.5"].get("G_get_mapset_name", "cdecl")
    G_get_mapset_name.argtypes = [c_int]
    G_get_mapset_name.restype = c_char_p

# include/grass/defs/gis.h: 532
if _libs["grass_gis.8.5"].has("G_create_alt_search_path", "cdecl"):
    G_create_alt_search_path = _libs["grass_gis.8.5"].get(
        "G_create_alt_search_path", "cdecl"
    )
    G_create_alt_search_path.argtypes = []
    G_create_alt_search_path.restype = None

# include/grass/defs/gis.h: 533
if _libs["grass_gis.8.5"].has("G_switch_search_path", "cdecl"):
    G_switch_search_path = _libs["grass_gis.8.5"].get("G_switch_search_path", "cdecl")
    G_switch_search_path.argtypes = []
    G_switch_search_path.restype = None

# include/grass/defs/gis.h: 534
if _libs["grass_gis.8.5"].has("G_reset_mapsets", "cdecl"):
    G_reset_mapsets = _libs["grass_gis.8.5"].get("G_reset_mapsets", "cdecl")
    G_reset_mapsets.argtypes = []
    G_reset_mapsets.restype = None

# include/grass/defs/gis.h: 535
if _libs["grass_gis.8.5"].has("G_get_available_mapsets", "cdecl"):
    G_get_available_mapsets = _libs["grass_gis.8.5"].get(
        "G_get_available_mapsets", "cdecl"
    )
    G_get_available_mapsets.argtypes = []
    G_get_available_mapsets.restype = POINTER(POINTER(c_char))

# include/grass/defs/gis.h: 536
if _libs["grass_gis.8.5"].has("G_add_mapset_to_search_path", "cdecl"):
    G_add_mapset_to_search_path = _libs["grass_gis.8.5"].get(
        "G_add_mapset_to_search_path", "cdecl"
    )
    G_add_mapset_to_search_path.argtypes = [String]
    G_add_mapset_to_search_path.restype = None

# include/grass/defs/gis.h: 537
if _libs["grass_gis.8.5"].has("G_is_mapset_in_search_path", "cdecl"):
    G_is_mapset_in_search_path = _libs["grass_gis.8.5"].get(
        "G_is_mapset_in_search_path", "cdecl"
    )
    G_is_mapset_in_search_path.argtypes = [String]
    G_is_mapset_in_search_path.restype = c_int

# include/grass/defs/gis.h: 540
if _libs["grass_gis.8.5"].has("G_myname", "cdecl"):
    G_myname = _libs["grass_gis.8.5"].get("G_myname", "cdecl")
    G_myname.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_myname.restype = ReturnString
    else:
        G_myname.restype = String
        G_myname.errcheck = ReturnString

# include/grass/defs/gis.h: 543
if _libs["grass_gis.8.5"].has("G_color_values", "cdecl"):
    G_color_values = _libs["grass_gis.8.5"].get("G_color_values", "cdecl")
    G_color_values.argtypes = [
        String,
        POINTER(c_float),
        POINTER(c_float),
        POINTER(c_float),
    ]
    G_color_values.restype = c_int

# include/grass/defs/gis.h: 544
if _libs["grass_gis.8.5"].has("G_color_name", "cdecl"):
    G_color_name = _libs["grass_gis.8.5"].get("G_color_name", "cdecl")
    G_color_name.argtypes = [c_int]
    G_color_name.restype = c_char_p

# include/grass/defs/gis.h: 547
if _libs["grass_gis.8.5"].has("G_newlines_to_spaces", "cdecl"):
    G_newlines_to_spaces = _libs["grass_gis.8.5"].get("G_newlines_to_spaces", "cdecl")
    G_newlines_to_spaces.argtypes = [String]
    G_newlines_to_spaces.restype = None

# include/grass/defs/gis.h: 550
if _libs["grass_gis.8.5"].has("G_name_is_fully_qualified", "cdecl"):
    G_name_is_fully_qualified = _libs["grass_gis.8.5"].get(
        "G_name_is_fully_qualified", "cdecl"
    )
    G_name_is_fully_qualified.argtypes = [String, String, String]
    G_name_is_fully_qualified.restype = c_int
